--- a/_pages/404.html
+++ b/_pages/404.html
@@ -3,11 +3,13 @@ layout: default
 permalink: /404.html
 ---
 
-<section class="section-padding">
-  <div class="container">
-    <div class="row single-content">
+<section class="pv5">
+  <div class="container-fluid">
+    <h2 class="f2 mt0">404</h2>
+
+    <div class="row">
       <div class="col-md-8 col-md-offset-2">
-        <h3>Not Found :(</h3>
+        <h3 class="f1 mt0">Not Found :(</h3>
         <p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
         <p>It looks like this was the result of either:</p>
         <ul>
@@ -15,7 +17,7 @@ permalink: /404.html
           <li>an out-of-date link</li>
           <li>recent changes to static pages</li>
         </ul>
-        <p>Try starting back at <a href="{{ site.BASE_PATH }}">the homepage</a>.</p>
+        <p>Try starting back at <a href="{{ site.BASE_PATH }}" class="link blue hover-dark-blue">the homepage</a>.</p>
       </div>
     </div>
   </div>
