--- a/_pages/styleguide.html
+++ b/_pages/styleguide.html
@@ -5,51 +5,13 @@ slug: styleguide
 permalink: /styleguide/
 ---
 
-<section class="section-padding">
+<section class="pv5">
   <div class="container-fluid">
-    <h2 class="heading-underline text-center">Styleguide</h2>
-
-    <hgroup>
-      <h1 class="display-1">display-1</h1>
-      <h1 class="display-2">display-2</h1>
-      <h1 class="display-3">display-3</h1>
-      <h1 class="display-4">display-4</h1>
-      <h1 class="lead">lead</h1>
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
-      <h4>Heading 4</h4>
-      <h5>Heading 5</h5>
-      <h6>Heading 6</h6>
-    </hgroup>
+    <h2 class="f2 mt0">Styleguide</h2>
 
     <div class="">
-      <h3>Buttons</h3>
-      <button type="button" name="button">Default Button</button>
-      <button type="button" name="button" class="button-primary">Primary Button</button>
-      <button type="button" name="button" class="button-secondary">Secondary Button</button>
-      <button type="button" name="button" class="button-ghost">Ghost Button</button>
-    </div>
-
-    <div class="">
-      <h3>Lists</h3>
-
-      <ul class="list-unstyled">
-        <li>Unstyled</li>
-        <li>Unstyled</li>
-        <li>Unstyled</li>
-      </ul>
-
-      <ul class="list-inline">
-        <li>Inline</li>
-        <li>Inline</li>
-        <li>Inline</li>
-      </ul>
-    </div>
-
-    <div class="">
-      <h3>Inline Elements</h3>
-      <p>This text is <mark>marked</mark>.</p>
+      <h3>Links</h3>
+      <a href="#" itemprop="url" class="link blue hover-dark-blue">Link</a>
     </div>
   </div>
 </section>
