Replace reveal.js with webslides for slideshows

--- a/slides/sass-advanced-concepts.html
+++ b/slides/sass-advanced-concepts.html
@@ -5,25 +5,24 @@ slug: sass-advanced-concepts
 permalink: /slides/sass-advanced-concepts/
 ---
 
-
-<section>
+<section class="content-center">
   <h2>Sass Advanced Concepts</h2>
-  <p></p>
 </section>
 
-<section>
+<section class="wrap size-50">
   <h2>Guards</h2>
+  <hr>
   <p>Expression matching</p>
 </section>
 
-<section>
+<section class="wrap size-50">
   <h2>Type checking</h2>
 </section>
 
-<section>
+<section class="wrap size-50">
   <h2>Pattern matching</h2>
 </section>
 
-<section>
+<section class="wrap size-50">
   <h2><a href="https://speakerdeck.com/beausmith/less-tips-tricks-best-practices">More tips</a></h2>
 </section>
