Add a new page layout to reduce duplication. Update about me info.

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,24 +1,18 @@
 ---
-layout: default
+layout: page
+title: 404 Page Not Found
 permalink: /404.html
 ---
 
-<section class="pv5">
-  <div class="container-fluid">
-    <h2 class="f2 mt0">404</h2>
-
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
-        <h3 class="f1 mt0">Not Found :(</h3>
-        <p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-        <p>It looks like this was the result of either:</p>
-        <ul>
-          <li>a mistyped address</li>
-          <li>an out-of-date link</li>
-          <li>recent changes to static pages</li>
-        </ul>
-        <p>Try starting back at <a href="{{ site.BASE_PATH }}" class="link blue hover-dark-blue">the homepage</a>.</p>
-      </div>
-    </div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+    <p>It looks like this was the result of either:</p>
+    <ul>
+      <li>a mistyped address</li>
+      <li>an out-of-date link</li>
+      <li>recent changes to static pages</li>
+    </ul>
+    <p>Try starting back at <a href="{{ site.BASE_PATH }}" class="link blue hover-dark-blue">the homepage</a>.</p>
   </div>
-</section>
+</div>
