--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -1,63 +1,56 @@
 ---
-layout: default
+layout: page
 title: Categories
 header: Posts By Category
 group: navigation
 permalink: /categories/
 ---
 
-
-<section class="pv5">
-  <div class="container-fluid">
-    <h2 class="f2 mt0">Categories</h2>
-
-    <div class="row single-content">
-      <div class="col-xs-12 col-sm-3">
-        <ul class="list pl0 lh-copy">
-          {% assign categories_list = site.categories %}
-          {% if categories_list.first[0] == null %}
-            {% for category in categories_list %}
-                <li class="mb3">
-                    <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref" class="link blue hover-dark-blue">
-                      {{ category | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.categories[category].size }}</span>
-                   </a>
-                </li>
-            {% endfor %}
-          {% else %}
-            {% for category in categories_list %}
-                <li class="mb3">
-                    <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref" class="link blue hover-dark-blue">
-                        {{ category[0] | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ category[1].size }}</span>
-                    </a>
-                </li>
-            {% endfor %}
-          {% endif %}
-          {% assign categories_list = nil %}
-        </ul>
-      </div>
-
-      <div class="col-xs-12 col-sm-9 col-md-8 col-md-offset-1">
-        {% for category in site.categories %}
-          <div class="bg-white ba b--black-10 mb3" id="{{ category[0] }}-ref">
-            <div class="pa3">
-              <h3 class="f3 lh-solid mv0">{{ category[0] | capitalize }}</h3>
-            </div>
-            <div class="pa3">
-              <ul class="list pl0 mv0">
-                {% assign pages_list = category[1] %}
-                {% for node in pages_list %}
-                  {% if node.title != null %}
-                    {% if group == null or group == node.group %}
-                      <li class="lh-copy"><a href="{{ site.BASE_PATH }}{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
-                    {% endif %}
-                  {% endif %}
-                {% endfor %}
-                {% assign pages_list = nil %}
-              </ul>
-            </div>
-          </div>
+<div class="row single-content">
+  <div class="col-xs-12 col-sm-3">
+    <ul class="list pl0 lh-copy">
+      {% assign categories_list = site.categories %}
+      {% if categories_list.first[0] == null %}
+        {% for category in categories_list %}
+            <li class="mb3">
+                <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category }}-ref" class="link blue hover-dark-blue">
+                  {{ category | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.categories[category].size }}</span>
+               </a>
+            </li>
         {% endfor %}
-      </div>
-    </div>
+      {% else %}
+        {% for category in categories_list %}
+            <li class="mb3">
+                <a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref" class="link blue hover-dark-blue">
+                    {{ category[0] | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ category[1].size }}</span>
+                </a>
+            </li>
+        {% endfor %}
+      {% endif %}
+      {% assign categories_list = nil %}
+    </ul>
   </div>
-</section>
+
+  <div class="col-xs-12 col-sm-9 col-md-8 col-md-offset-1">
+    {% for category in site.categories %}
+      <div class="bg-white ba b--black-10 mb3" id="{{ category[0] }}-ref">
+        <div class="pa3">
+          <h3 class="f3 lh-solid mv0">{{ category[0] | capitalize }}</h3>
+        </div>
+        <div class="pa3">
+          <ul class="list pl0 mv0">
+            {% assign pages_list = category[1] %}
+            {% for node in pages_list %}
+              {% if node.title != null %}
+                {% if group == null or group == node.group %}
+                  <li class="lh-copy"><a href="{{ site.BASE_PATH }}{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
+            {% assign pages_list = nil %}
+          </ul>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</div>
