--- a/_pages/styleguide.html
+++ b/_pages/styleguide.html
@@ -1,17 +1,11 @@
 ---
-layout: default
+layout: page
 title: Styleguide
 slug: styleguide
 permalink: /styleguide/
 ---
 
-<section class="pv5">
-  <div class="container-fluid">
-    <h2 class="f2 mt0">Styleguide</h2>
-
-    <div class="">
-      <h3>Links</h3>
-      <a href="#" itemprop="url" class="link blue hover-dark-blue">Link</a>
-    </div>
-  </div>
-</section>
+<div class="">
+  <h3>Links</h3>
+  <a href="#" itemprop="url" class="link blue hover-dark-blue">Link</a>
+</div>
