Update gems, config, url structure, category names, sitemap generator

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -1,7 +1,5 @@
 ---
-layout: page
 title: About
-slug: about
 permalink: /about/
 ---
 
@@ -11,7 +9,7 @@ permalink: /about/
       <div class="pa3">
         <h2 class="heading-underline tc">About Me</h2>
         <p class="lh-copy">Heylo! I am <span class="fw6">Nathan Jessen</span>, a front-end web developer specializing in HTML and CSS. I live in the beautiful city of <span class="fw6">{{ site.location }}</span>. In my off hours I can be found hiking, running, reading, playing poker, or a plethora of other things.</p>
-        <img src="{{ site.BASE_PATH }}/assets/img/hiking.jpg" alt="Nathan Jessen" width="400" height="400" class="img-responsive">
+        <img src="{{ site.baseurl }}/assets/img/hiking.jpg" alt="Nathan Jessen" width="400" height="400" class="img-responsive">
       </div>
     </div>
   </div>
