--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,7 +1,5 @@
 ---
-layout: page
 title: Projects
-slug: projects
 permalink: /projects/
 ---
 
@@ -12,7 +10,7 @@ permalink: /projects/
         <div class="row">
           <div class="col-xs-12 col-sm-4">
             <a href="{{ project.link }}" target="_blank">
-              <img src="{{ site.base_url }}assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}" class="img-responsive mb3 mb0-ns">
+              <img src="{{ site.base_url }}/assets/img/portfolio/{{ project.thumbnail }}" alt="{{ project.title }}" class="img-responsive mb3 mb0-ns">
             </a>
           </div>
 
