--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,5 +1,4 @@
 ---
-layout: page
 title: 404 Page Not Found
 permalink: /404.html
 ---
@@ -13,6 +12,6 @@ permalink: /404.html
       <li>an out-of-date link</li>
       <li>recent changes to static pages</li>
     </ul>
-    <p>Try starting back at <a href="{{ site.BASE_PATH }}" class="link blue hover-dark-blue">the homepage</a>.</p>
+    <p>Try starting back at <a href="{{ site.baseurl }}" class="link blue hover-dark-blue">the homepage</a>.</p>
   </div>
 </div>
