--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -1,8 +1,5 @@
 ---
-layout: page
 title: Tags
-header: Posts By Tag
-group: navigation
 permalink: /tags/
 ---
 
@@ -13,17 +10,17 @@ permalink: /tags/
        {% if tags_list.first[0] == null %}
         {% for tag in tags_list %}
             <li class="mb3">
-                <a href="#{{ tag }}-ref" class="link blue hover-dark-blue">
-                  {{ tag | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.tags[tag].size }}</span>
-               </a>
+              <a href="#{{ tag | slugify }}-ref" class="link blue hover-dark-blue">
+                  {{ tag }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.tags[tag].size }}</span>
+              </a>
             </li>
         {% endfor %}
       {% else %}
         {% for tag in tags_list %}
             <li class="mb3">
-                <a href="#{{ tag[0] }}-ref" class="link blue hover-dark-blue">
-                    {{ tag[0] | capitalize }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ tag[1].size }}</span>
-                </a>
+              <a href="#{{ tag[0] | slugify }}-ref" class="link blue hover-dark-blue">
+                  {{ tag[0] }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ tag[1].size }}</span>
+              </a>
             </li>
         {% endfor %}
       {% endif %}
@@ -34,7 +31,7 @@ permalink: /tags/
   <div class="col-xs-12 col-sm-9 col-md-8 col-md-offset-1">
     {% for tag in site.tags %}
 
-      <div class="bg-white ba b--black-10 mb3" id="{{ tag[0] }}-ref">
+      <div class="bg-white ba b--black-10 mb3" id="{{ tag[0] | slugify }}-ref">
         <div class="pa3">
           <h3 class="f3 lh-solid mv0">{{ tag[0] }}</h3>
         </div>
@@ -44,7 +41,7 @@ permalink: /tags/
             {% for node in pages_list %}
               {% if node.title != null %}
                 {% if group == null or group == node.group %}
-                  <li class="lh-copy"><a href="{{ site.BASE_PATH }}{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                  <li class="lh-copy"><a href="{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
                 {% endif %}
               {% endif %}
             {% endfor %}
