--- a/_pages/404.html
+++ b/_pages/404.html
@@ -12,6 +12,6 @@ permalink: /404.html
       <li>an out-of-date link</li>
       <li>recent changes to static pages</li>
     </ul>
-    <p>Try starting back at <a href="{{ site.baseurl }}" class="link blue hover-dark-blue">the homepage</a>.</p>
+    <p>Try starting back at <a href="{{ site.baseurl }}" class="link primary hover-dark-primary">the homepage</a>.</p>
   </div>
 </div>
