--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -10,16 +10,16 @@ permalink: /categories/
       {% if categories_list.first[0] == null %}
         {% for category in categories_list %}
             <li class="mb3">
-                <a href="#{{ category | slugify }}-ref" class="link blue hover-dark-blue">
-                  {{ category }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.categories[category].size }}</span>
+                <a href="#{{ category | slugify }}-ref" class="link primary hover-dark-primary">
+                  {{ category }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ site.categories[category].size }}</span>
                </a>
             </li>
         {% endfor %}
       {% else %}
         {% for category in categories_list %}
             <li class="mb3">
-                <a href="#{{ category[0] | slugify }}-ref" class="link blue hover-dark-blue">
-                    {{ category[0] }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ category[1].size }}</span>
+                <a href="#{{ category[0] | slugify }}-ref" class="link primary hover-dark-primary">
+                    {{ category[0] }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ category[1].size }}</span>
                 </a>
             </li>
         {% endfor %}
@@ -40,7 +40,7 @@ permalink: /categories/
             {% for node in pages_list %}
               {% if node.title != null %}
                 {% if group == null or group == node.group %}
-                  <li class="lh-copy"><a href="{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                  <li class="lh-copy"><a href="{{node.url}}" class="link primary hover-dark-primary">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
                 {% endif %}
               {% endif %}
             {% endfor %}
