--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -10,16 +10,16 @@ permalink: /tags/
        {% if tags_list.first[0] == null %}
         {% for tag in tags_list %}
             <li class="mb3">
-              <a href="#{{ tag | slugify }}-ref" class="link blue hover-dark-blue">
-                  {{ tag }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ site.tags[tag].size }}</span>
+              <a href="#{{ tag | slugify }}-ref" class="link primary hover-dark-primary">
+                  {{ tag }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ site.tags[tag].size }}</span>
               </a>
             </li>
         {% endfor %}
       {% else %}
         {% for tag in tags_list %}
             <li class="mb3">
-              <a href="#{{ tag[0] | slugify }}-ref" class="link blue hover-dark-blue">
-                  {{ tag[0] }} <span class="f6 bg-dark-blue white pv1 ph3 br-pill fr">{{ tag[1].size }}</span>
+              <a href="#{{ tag[0] | slugify }}-ref" class="link primary hover-dark-primary">
+                  {{ tag[0] }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ tag[1].size }}</span>
               </a>
             </li>
         {% endfor %}
@@ -41,7 +41,7 @@ permalink: /tags/
             {% for node in pages_list %}
               {% if node.title != null %}
                 {% if group == null or group == node.group %}
-                  <li class="lh-copy"><a href="{{node.url}}" class="link blue hover-dark-blue">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                  <li class="lh-copy"><a href="{{node.url}}" class="link primary hover-dark-primary">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
                 {% endif %}
               {% endif %}
             {% endfor %}
