Update homepage copy

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,7 +1,14 @@
 ---
 permalink: /index.html
-layout: default
+layout: page
 ---
 
-{% include hero.html %}
-{% include services.html %}
+<div class="tr">
+  <p class="i f5 lh-copy mv2 black-60">Nomad developer</p>
+  <h1 class="f3 f2-ns lh-solid ttu fw6 mt0 mb4">Nathan Jessen</h1>
+  <p class="f4 lh-copy">
+    Front-end engineer with experience in fast static sites<br>
+    and modern web applications, currently focusing on<br>
+    VueJS, Vanilla JavaScript and design systems
+  </p>
+</div>
