--- a/_pages/about.html
+++ b/_pages/about.html
@@ -3,47 +3,46 @@ title: About
 permalink: /about/
 ---
 
-<div class="row">
-  <div class="col-xs-12 col-md-8">
-    <div class="mb3 tl">
-      <p class="lh-copy">Hello! I am <span class="fw6">Nathan Jessen</span>, a front-end web developer specializing in HTML and CSS. I live in the beautiful city of <span class="fw6">{{ site.location }}</span>. In my off hours I can be found hiking, running, reading, playing poker, or a plethora of other things.</p>
-      <img src="{{ site.baseurl }}/assets/img/hiking.jpg" alt="Nathan Jessen" width="400" height="400" class="img-responsive">
-    </div>
-  </div>
-
-  <div class="col-xs-12 col-md-4">
-    <div class="ba b--black-10 mb3">
-      <div class="pa3">
-        <h2 class="heading-underline tc">Experience</h2>
-        <p><span class="fw6">Web Developer</span> at <a href="https://www.vml.com/" class="link primary hover-dark-primary" target="_blank">VML</a> &dash; 2012 - Current</p>
-      </div>
-    </div>
-
-    <div class="ba b--black-10 mb3">
-      <div class="pa3">
-        <h2 class="heading-underline tc">Education</h2>
-        <ul class="list pl0 lh-copy">
-          <li><span class="fw6">B.S. in Computer Science</span></li>
-          <li>Minor in Mathematics</li>
-          <li>Minor in Database Systems Management</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="ba b--black-10 mb3">
-      <div class="pa3">
-        <h2 class="heading-underline tc">Technologies</h2>
-        <ul class="lh-copy">
-          <li><span class="fw6">HTML</span></li>
-          <li><span class="fw6">CSS</span></li>
-          <li>Preprocessors (<span class="fw6">Sass</span>, Less, Stylus)</li>
-          <li>Build tools (<span class="fw6">PostCSS</span>, Gulp, Grunt)</li>
-          <li>JavaScript (<span class="fw6">Vanilla</span>, AngularJS, jQuery)</li>
-          <li>Version Control (<span class="fw6">Git</span>, SVN)</li>
-          <li>CMS (AEM 5/6, WordPress, Drupal)</li>
-          <li>Template Engines (<span class="fw6">Liquid</span>, Handlebars, Nunjucks, Jade)</li>
-        </ul>
-      </div>
-    </div>
+<div class="ba b--black-10 mb3">
+  <div class="pa3">
+    <h2 class="heading-underline">Experience</h2>
+    <p><span class="fw6">Web Developer</span> at <a href="https://www.vmlyr.com/" class="link primary"
+        target="_blank">VMLY&amp;R</a> &dash; 2012 - Current</p>
   </div>
 </div>
+
+<div class="ba b--black-10 mb3">
+  <div class="pa3">
+    <h2 class="heading-underline">Education</h2>
+    <ul class="list pl0 lh-copy">
+      <li><span class="fw6">B.S. in Computer Science</span></li>
+      <li>Minor in Mathematics</li>
+      <li>Minor in Database Systems Management</li>
+    </ul>
+  </div>
+</div>
+
+<div class="ba b--black-10 mb3">
+  <div class="pa3">
+    <h2 class="heading-underline">Technologies</h2>
+    <ul class="lh-copy">
+      <li><span class="fw6">HTML</span></li>
+      <li><span class="fw6">CSS</span></li>
+      <li>Preprocessors (<span class="fw6">Sass</span>, Less, Stylus)</li>
+      <li>Build tools (<span class="fw6">PostCSS</span>, Gulp, Grunt)</li>
+      <li>JavaScript (<span class="fw6">VueJS</span>, AngularJS, Ember, jQuery, Vanilla)</li>
+      <li>Version Control (<span class="fw6">Git</span>, SVN)</li>
+      <li>CMS (AEM 5/6, WordPress, Drupal)</li>
+      <li>Template Engines (<span class="fw6">Liquid</span>, Handlebars, Nunjucks, Jade)</li>
+    </ul>
+  </div>
+</div>
+
+{% if site.email %}
+  <div class="bg-white ba b--black-10 mb3">
+    <div class="pa3">
+      <h2 class="heading-underline">Contact</h2>
+      <p><a href="mailto:{{ site.email }}" class="link primary">{{ site.email }}</a></p>
+    </div>
+  </div>
+{% endif %}
