--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -9,19 +9,19 @@ permalink: /categories/
       {% assign categories_list = site.categories %}
       {% if categories_list.first[0] == null %}
         {% for category in categories_list %}
-            <li class="mb3">
-                <a href="#{{ category | slugify }}-ref" class="link primary hover-dark-primary">
-                  {{ category }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ site.categories[category].size }}</span>
-               </a>
-            </li>
+          <li class="mb2">
+            <a href="#{{ category | slugify }}-ref" class="link primary flex justify-between">
+              <span>{{ category }}</span> <span class="f6">{{ site.categories[category].size }}</span>
+            </a>
+          </li>
         {% endfor %}
       {% else %}
         {% for category in categories_list %}
-            <li class="mb3">
-                <a href="#{{ category[0] | slugify }}-ref" class="link primary hover-dark-primary">
-                    {{ category[0] }} <span class="f6 bg-dark-primary white pv1 ph3 br-pill fr">{{ category[1].size }}</span>
-                </a>
-            </li>
+          <li class="mb2">
+            <a href="#{{ category[0] | slugify }}-ref" class="link primary flex justify-between">
+              <span>{{ category[0] }}</span> <span class="f6">{{ category[1].size }}</span>
+            </a>
+          </li>
         {% endfor %}
       {% endif %}
       {% assign categories_list = nil %}
@@ -40,7 +40,7 @@ permalink: /categories/
             {% for node in pages_list %}
               {% if node.title != null %}
                 {% if group == null or group == node.group %}
-                  <li class="lh-copy"><a href="{{node.url}}" class="link primary hover-dark-primary">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
+                  <li class="lh-copy"><a href="{{node.url}}" class="link primary">{{node.title}}</a> <span class="mid-gray">- {{ node.date | date: "%B %d, %Y" }}</span></li>
                 {% endif %}
               {% endif %}
             {% endfor %}
