Update prehead text

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,10 +1,10 @@
 ---
-permalink: /index.html
 layout: page
+permalink: /
 ---
 
 <div class="tr">
-  <p class="i f5 lh-copy mv2 black-60">Nomad developer</p>
+  <p class="i f5 lh-copy mv2 black-60">Front-end Developer</p>
   <h1 class="f3 f2-ns lh-solid ttu fw6 mt0 mb4">Nathan Jessen</h1>
   <p class="f4 lh-copy">
     Front-end engineer with experience in fast static sites<br>
