--- a/_pages/404.html
+++ b/_pages/404.html
@@ -1,17 +1,16 @@
 ---
-title: 404 Page Not Found
 permalink: /404.html
+layout: default
 ---
 
-<div class="row">
-  <div class="col-md-8 col-md-offset-2">
-    <p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
-    <p>It looks like this was the result of either:</p>
-    <ul>
-      <li>a mistyped address</li>
-      <li>an out-of-date link</li>
-      <li>recent changes to static pages</li>
-    </ul>
-    <p>Try starting back at <a href="{{ site.baseurl }}" class="link primary">the homepage</a>.</p>
-  </div>
+<div>
+  <h1>404</h1>
+
+  <p>Sorry, but the page you were trying to view does not exist or has been relocated.</p>
+  <p>It looks like this was the result of either:</p>
+  <ul>
+    <li>a mistyped address</li>
+    <li>an out-of-date link</li>
+    <li>recent changes to static pages</li>
+  </ul>
 </div>
