Remove link to vmlyr

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,8 +7,7 @@ permalink: /about/
 <div class="ba b--black-10 mb3">
   <div class="pa3">
     <h2 class="heading-underline">Experience</h2>
-    <p><span class="fw6">Web Developer</span> at <a href="https://www.vmlyr.com/" class="link primary"
-        target="_blank">VMLY&amp;R</a> &dash; 2012 - Current</p>
+    <p><span class="fw6">Web Developer</span>
   </div>
 </div>
 
