--- a/_pages/index.html
+++ b/_pages/index.html
@@ -9,6 +9,6 @@ permalink: /
   <p class="f4 lh-copy">
     Front-end engineer with experience in fast static sites<br>
     and modern web applications, currently focusing on<br>
-    VueJS, Vanilla JavaScript and design systems
+    React, Redux and Storybook
   </p>
 </div>
