Update main pages

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -4,45 +4,98 @@ title: About
 permalink: /about/
 ---
 
-<div class="ba b--black-10 mb3">
-  <div class="pa3">
-    <h2 class="heading-underline">Experience</h2>
-    <p><span class="fw6">Web Developer</span>
+<div class="bg-white shadow overflow-hidden sm:rounded-lg">
+  <div class="px-4 py-5 border-b border-gray-200 sm:px-6">
+    <h3 class="text-lg leading-6 font-medium text-gray-900">
+      Information
+    </h3>
+    <p class="mt-1 max-w-2xl text-sm leading-5 text-gray-500">
+      Personal details and application.
+    </p>
+  </div>
+  <div class="px-4 py-5 sm:px-6">
+    <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+      <div class="sm:col-span-1">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Full name
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          Nathan Jessen
+        </dd>
+      </div>
+      <div class="sm:col-span-1">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Position
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          Frontend Developer
+        </dd>
+      </div>
+      <div class="sm:col-span-1">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Education
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          B.S. in Computer Science<br />
+          Minor in Mathematics<br />
+          Minor in Database Systems Management
+        </dd>
+      </div>
+      <!-- <div class="sm:col-span-1">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Salary expectation
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          $120,000
+        </dd>
+      </div> -->
+      <div class="sm:col-span-2">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Technologies
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          HTML, CSS, Sass, PostCss, Gulp, Grunt, JavaScript, Vue, React
+        </dd>
+      </div>
+      <!-- <div class="sm:col-span-2">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Attachments
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <ul class="border border-gray-200 rounded-md">
+            <li class="pl-3 pr-4 py-3 flex items-center justify-between text-sm leading-5">
+              <div class="w-0 flex-1 flex items-center">
+                <svg class="flex-shrink-0 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd" />
+                </svg>
+                <span class="ml-2 flex-1 w-0 truncate">
+                  resume_back_end_developer.pdf
+                </span>
+              </div>
+              <div class="ml-4 flex-shrink-0">
+                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500 transition duration-150 ease-in-out">
+                  Download
+                </a>
+              </div>
+            </li>
+            <li class="border-t border-gray-200 pl-3 pr-4 py-3 flex items-center justify-between text-sm leading-5">
+              <div class="w-0 flex-1 flex items-center">
+                <svg class="flex-shrink-0 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M8 4a3 3 0 00-3 3v4a5 5 0 0010 0V7a1 1 0 112 0v4a7 7 0 11-14 0V7a5 5 0 0110 0v4a3 3 0 11-6 0V7a1 1 0 012 0v4a1 1 0 102 0V7a3 3 0 00-3-3z" clip-rule="evenodd" />
+                </svg>
+                <span class="ml-2 flex-1 w-0 truncate">
+                  coverletter_back_end_developer.pdf
+                </span>
+              </div>
+              <div class="ml-4 flex-shrink-0">
+                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500 transition duration-150 ease-in-out">
+                  Download
+                </a>
+              </div>
+            </li>
+          </ul>
+        </dd>
+      </div> -->
+    </dl>
   </div>
 </div>
-
-<div class="ba b--black-10 mb3">
-  <div class="pa3">
-    <h2 class="heading-underline">Education</h2>
-    <ul class="list pl0 lh-copy">
-      <li><span class="fw6">B.S. in Computer Science</span></li>
-      <li>Minor in Mathematics</li>
-      <li>Minor in Database Systems Management</li>
-    </ul>
-  </div>
-</div>
-
-<div class="ba b--black-10 mb3">
-  <div class="pa3">
-    <h2 class="heading-underline">Technologies</h2>
-    <ul class="lh-copy">
-      <li><span class="fw6">HTML</span></li>
-      <li><span class="fw6">CSS</span></li>
-      <li>Preprocessors (<span class="fw6">Sass</span>, Less, Stylus)</li>
-      <li>Build tools (<span class="fw6">PostCSS</span>, Gulp, Grunt)</li>
-      <li>JavaScript (<span class="fw6">VueJS</span>, AngularJS, Ember, jQuery, Vanilla)</li>
-      <li>Version Control (<span class="fw6">Git</span>, SVN)</li>
-      <li>CMS (AEM 5/6, WordPress, Drupal)</li>
-      <li>Template Engines (<span class="fw6">Liquid</span>, Handlebars, Nunjucks, Jade)</li>
-    </ul>
-  </div>
-</div>
-
-{% if site.email %}
-  <div class="bg-white ba b--black-10 mb3">
-    <div class="pa3">
-      <h2 class="heading-underline">Contact</h2>
-      <p><a href="mailto:{{ site.email }}" class="link primary">{{ site.email }}</a></p>
-    </div>
-  </div>
-{% endif %}
