--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,14 +1,9 @@
 ---
-layout: page
+title: Home
+layout: default
 permalink: /
 ---
 
-<div class="tr">
-  <p class="i f5 lh-copy mv2 black-60">Front-end Developer</p>
-  <h1 class="f3 f2-ns lh-solid ttu fw6 mt0 mb4">Nathan Jessen</h1>
-  <p class="f4 lh-copy">
-    Front-end engineer with experience in fast static sites<br>
-    and modern web applications, currently focusing on<br>
-    React, Redux and Storybook
-  </p>
-</div>
+{% include banner.html %}
+{% include featured-projects.html %}
+{% include call-to-action.html %}
