--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -3,35 +3,22 @@ title: Projects
 permalink: /projects/
 ---
 
-<h3 class="f3 near-black mt0">Agency work</h3>
-<p class="f4">Over the years at <a href="https://www.vmlyr.com" class="link primary fw5">VMLY&amp;R</a>, I've had the
-  opportunity to work with some amazing clients on a wide variety of projects.</p>
-
-<ul class="list pl0">
-  {% for project in site.projects reversed %}
-  {% unless project.company != 'VMLYR' %}
-  <li class="mb3 relative">
-    <a href="{{ project.link }}" class="db link bg-white hover-bg-dark-white primary f3 h-100 pa4 {{project.class}}" target="_blank">
-      <h3 class="f3 mv0 tc">{{ project.client }}</h3>
-      <h4 class="f5 fw5 mt2 mb0 tc">{{ project.title }}</h4>
-    </a>
-  </li>
-  {% endunless %}
-  {% endfor %}
-</ul>
-
-<h3 class="f3 near-black mt0">Side projects</h3>
-<p class="f4">Occasionally, I'll take on freelance work.</p>
-
-<ul class="list pl0">
-  {% for project in site.projects reversed %}
-  {% unless project.company != 'Freelance' %}
-  <li class="mb3 relative">
-    <a href="{{ project.link }}" class="db link bg-white hover-bg-dark-white primary f3 h-100 ph3 pv5 {{project.class}}" target="_blank">
-      <h3 class="f3 mv0 tc">{{ project.client }}</h3>
-      <h4 class="f5 fw5 mt2 mb0 tc">{{ project.title }}</h4>
-    </a>
-  </li>
-  {% endunless %}
-  {% endfor %}
-</ul>
+<div>
+  <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-4">
+    {% for project in site.projects reversed %}
+    <li class="col-span-1 flex shadow-sm rounded-md">
+      <div class="flex-shrink-0 flex items-center justify-center w-16 {{project.class}} text-white text-sm leading-5 font-medium rounded-l-md">
+        RC
+      </div>
+      <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 bg-white rounded-r-md truncate">
+        <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
+          <a href="{{ project.link }}" class="text-gray-900 font-medium hover:text-gray-600 transition ease-in-out duration-150">
+            {{ project.title }}
+          </a>
+          <p class="text-gray-500">{{ project.client }}</p>
+        </div>
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
