--- a/_pages/about.html
+++ b/_pages/about.html
@@ -33,6 +33,14 @@ permalink: /about/
       </div>
       <div class="sm:col-span-1">
         <dt class="text-sm leading-5 font-medium text-gray-500">
+          Technologies
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          HTML, CSS, Sass, PostCss, Gulp, Grunt, JavaScript, Vue, React
+        </dd>
+      </div>
+      <div class="sm:col-span-1">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
           Education
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
@@ -51,10 +59,48 @@ permalink: /about/
       </div> -->
       <div class="sm:col-span-2">
         <dt class="text-sm leading-5 font-medium text-gray-500">
-          Technologies
+          Ideal Team
         </dt>
         <dd class="mt-1 text-sm leading-5 text-gray-900">
-          HTML, CSS, Sass, PostCss, Gulp, Grunt, JavaScript, Vue, React
+          <ul>
+            <li>You're excited about implementing best practices and introduce tooling to help a growing team stay consistent and efficient.</li>
+            <li>You’re always looking at new technologies and you push to innovate.</li>
+            <li>You're a small team of engineers who are eager to share your expertise in client-side development.</li>
+            <li>You're looking for someone to implement the design, modification, and maintenance of web applications and user interfaces.</li>
+          </ul>
+        </dd>
+      </div>
+      <div class="sm:col-span-2">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          What I Offer
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <ul>
+            <li>Collaborate with design team to implement solutions for our front-end</li>
+            <li>Ensure the technical feasibility of UI/UX designs</li>
+            <li>A user first mindset and strong sensibilities for UX and design</li>
+            <li>Work across the organization to standardize the UI of the website</li>
+            <li>Implement and maintain a living style guide/pattern library in partnership with the design team</li>
+            <li>Work within pre-defined requirements and produce code that meet those requirements</li>
+            <li>Experience working within an established set of front-end standards</li>
+            <li>Implement code that adheres to SEO principles and accessibility standards</li>
+            <li>Advocate for the best interest of the user across the organization</li>
+            <li>Oversee the technical aspects of the frontend and lead the direction of the frontend</li>
+            <li>Implement semantic markup</li>
+            <li>Opinionated on Javascript and CSS best practices</li>
+            <li>Perform cross-browser compatibility tests and iterate to work through bugs</li>
+          </ul>
+        </dd>
+      </div>
+      <div class="sm:col-span-2">
+        <dt class="text-sm leading-5 font-medium text-gray-500">
+          Shared Responsibilities
+        </dt>
+        <dd class="mt-1 text-sm leading-5 text-gray-900">
+          <ul>
+            <li>Ideals consistent with the company's Core Values</li>
+            <li>Learn new technologies and share ideas</li>
+          </ul>
         </dd>
       </div>
       <!-- <div class="sm:col-span-2">
