--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -2,72 +2,81 @@
 title: Projects
 ---
 
-<div>
-  <h2>Legend</h2>
-  <div class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-3">
-    <div class="flex bg-white hover:bg-green-100 transition ease-in-out duration-150 cursor-pointer">
-      <div
-        class="flex-shrink-0 flex items-center justify-center w-16 bg-green-500 text-white text-sm leading-5 font-medium rounded-l-md">
-        GO
-      </div>
-      <div
-        class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
-        <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
-          <span class="text-gray-900 font-medium">
-            Available
-          </span>
-          <p class="text-gray-600">Site is still available</p>
-        </div>
-      </div>
+<h2>Legend</h2>
+<div class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-3">
+  <div class="flex bg-white hover:bg-green-100 transition ease-in-out duration-150 cursor-pointer">
+    <div class="flex-shrink-0 flex items-center justify-center w-16 bg-green-500 text-white text-sm leading-5 font-medium rounded-l-md">
+      AV
     </div>
-
-    <div class="flex bg-white cursor-not-allowed">
-      <div
-        class="flex-shrink-0 flex items-center justify-center w-16 bg-red-500 text-white text-sm leading-5 font-medium rounded-l-md">
-        STOP
-      </div>
-      <div
-        class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
-        <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
-          <span class="text-gray-900 font-medium">
-            Not Available
-          </span>
-          <p class="text-gray-600">Site no longer available</p>
-        </div>
+    <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
+      <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
+        <span class="text-gray-900 font-medium">
+          Available
+        </span>
+        <p class="text-gray-600">Site is available.</p>
       </div>
     </div>
   </div>
 
-  <h2 class="mt-8">Projects</h2>
-  <ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-3">
-    {% for project in site.data.projects reversed %}
-    {% unless project.published == false %}
+  <div class="flex bg-white hover:bg-orange-100 transition ease-in-out duration-150 cursor-pointer">
+    <div class="flex-shrink-0 flex items-center justify-center w-16 bg-orange-400 text-white text-sm leading-5 font-medium rounded-l-md">
+      UP
+    </div>
+    <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
+      <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
+        <span class="text-gray-900 font-medium">
+          Updated
+        </span>
+        <p class="text-gray-600">Site was redesigned or rebuilt.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="flex bg-white cursor-not-allowed">
+    <div class="flex-shrink-0 flex items-center justify-center w-16 bg-red-500 text-white text-sm leading-5 font-medium rounded-l-md">
+      NA
+    </div>
+    <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
+      <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
+        <span class="text-gray-900 font-medium">
+          Not Available
+        </span>
+        <p class="text-gray-600">Site is NA or password protected.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<h2 class="mt-8">Projects</h2>
+<ul class="mt-3 grid grid-cols-1 gap-5 sm:gap-6 sm:grid-cols-2 lg:grid-cols-3">
+  {% for project in site.data.projects %}
+  {% unless project.published == false %}
     <li class="col-span-1 shadow-sm rounded-md">
-      {% if project.available == false %}
+      {% if project.status == 0 %}
       <div class="flex bg-white cursor-not-allowed">
-        {% else %}
-        <a href="{{ project.link }}" target="_blank" class="flex bg-white hover:bg-green-100 transition ease-in-out duration-150">
-          {% endif %}
-          <div
-            class="{% if project.available == false %}bg-red-500{% else %}bg-green-500{% endif %} flex-shrink-0 flex items-center justify-center w-16 text-white text-sm leading-5 font-medium rounded-l-md">
-            {{ project.abbrev }}
-          </div>
-          <div
-            class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
-            <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
-              <span class="text-gray-900 font-medium">
-                {{ project.title }}
-              </span>
-              <p class="text-gray-600">{{ project.client }}</p>
-            </div>
-          </div>
-          {% if project.available == false %}
+      {% else %}
+      <a href="{{ project.link }}" target="_blank"
+        class="flex bg-white {% if project.status == 1 %}hover:bg-green-100{% else %}hover:bg-orange-100{% endif %} transition ease-in-out duration-150">
+      {% endif %}
+
+      <div class="{% if project.status == 0 %}bg-red-500{% elsif project.status == 1 %}bg-green-500{% else %}bg-orange-400{% endif %} flex-shrink-0 flex items-center justify-center w-16 text-white text-sm leading-5 font-medium rounded-l-md">
+        {{ project.abbrev }}
+      </div>
+      <div class="flex-1 flex items-center justify-between border-t border-r border-b border-gray-200 rounded-r-md truncate">
+        <div class="flex-1 px-4 py-2 text-sm leading-5 truncate">
+          <span class="text-gray-900 font-medium">
+            {{ project.title }}
+          </span>
+          <p class="text-gray-600">{{ project.client }}</p>
+        </div>
+      </div>
+
+      {% if project.status == 0 %}
       </div>
       {% else %}
       </a>
       {% endif %}
     </li>
-    {% endunless %}
-    {% endfor %}
-  </ul>
-</div>
+  {% endunless %}
+  {% endfor %}
+</ul>
