--- a/_pages/tags.html
+++ b/_pages/tags.html
@@ -3,10 +3,19 @@ title: Tags
 ---
 
 {% for tag in site.tags %}
-  <h3 class="text-2xl mb-4 pl-6">
-    {{ tag[0] }}
-  </h3>
-  <div class="bg-white shadow overflow-hidden sm:rounded-md mb-8">
+  <div class="bg-white overflow-hidden sm:rounded-lg sm:shadow mb-8">
+    <div class="bg-white px-4 py-5 border-b border-gray-200 sm:px-6">
+      <div class="flex items-center justify-between flex-wrap sm:flex-no-wrap">
+        <h3 class="text-lg leading-6 font-medium text-gray-900">
+          {{ tag[0] }}
+        </h3>
+        <div class="flex-shrink-0">
+          <span class="inline-flex items-center px-2 py-1 rounded-md text-sm font-medium leading-5 bg-green-200 text-green-800">
+            {{ tag[1].size }}
+          </span>
+        </div>
+      </div>
+    </div>
     <ul>
       {% assign pages_list = tag[1] %}
       {% for node in pages_list %}
