Add testimonial from Ryan

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -6,4 +6,5 @@ permalink: /
 
 {% include banner.html %}
 {% include featured-projects.html %}
+{% include testimonial.html %}
 {% include call-to-action.html %}
