--- a/_pages/posts.html
+++ b/_pages/posts.html
@@ -20,7 +20,7 @@ title: Posts
             {{ post.title }}
           </h3>
           <p class="mt-3 text-base leading-6 text-gray-500">
-            {{ post.description }}
+            {{ post.excerpt }}
           </p>
         </a>
         <div class="mt-3">
