Rename banner to home-hero. Add home layout

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -1,10 +1,8 @@
 ---
 title: Home
-layout: default
+layout: home
 permalink: /
 ---
 
-{% include banner.html %}
 {% include featured-projects.html %}
 {% include testimonial.html %}
-{% include call-to-action.html %}
